// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-desktop 1`] = `
<DocumentFragment>
  <div
    class="relative bg-cover bg-center rounded-lg border border-white/10 p-4 mb-4 sm:p-6 text-white overflow-visible"
    style="background-image: url("/images/Kollector-Skum-bg.png"); width: 1280px;"
  >
    <div
      class="absolute inset-0 bg-black/70"
    />
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all duration-200 hover:bg-white/10"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-gray-200"
          >
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-white/10 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 21h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M3 16h5v5M8 16V9l4 2 4-2v7h3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6 7V3h2v4"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-mobile 1`] = `
<DocumentFragment>
  <div
    class="relative bg-cover bg-center rounded-lg border border-white/10 p-4 mb-4 sm:p-6 text-white overflow-visible"
    style="background-image: url("/images/Kollector-Skum-bg.png"); width: 375px;"
  >
    <div
      class="absolute inset-0 bg-black/70"
    />
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all duration-200 hover:bg-white/10"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-gray-200"
          >
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-white/10 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 21h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M3 16h5v5M8 16V9l4 2 4-2v7h3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6 7V3h2v4"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-tablet 1`] = `
<DocumentFragment>
  <div
    class="relative bg-cover bg-center rounded-lg border border-white/10 p-4 mb-4 sm:p-6 text-white overflow-visible"
    style="background-image: url("/images/Kollector-Skum-bg.png"); width: 768px;"
  >
    <div
      class="absolute inset-0 bg-black/70"
    />
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all duration-200 hover:bg-white/10"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-gray-200"
          >
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-white/10 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 21h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M3 16h5v5M8 16V9l4 2 4-2v7h3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6 7V3h2v4"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-white/5 rounded-lg border border-white/10 p-4 transition-all duration-200 hover:bg-white/10 hover:border-white hover:shadow-lg hover:shadow-white/10"
          >
            <label
              class="block text-sm font-medium text-gray-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-white/5 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white text-white placeholder-gray-400 transition-all"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
